# polymarket-copy-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  generate_api_creds.py  pyproject.toml
src/polymarket_copy_bot/: client.py  config.py  copier.py  dashboard.py  main.py  state.py  tracker.py
